--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,7 +15,7 @@
 -->
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.WaterTracker" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.JuiceTracker" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -29,12 +29,12 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.WaterTracker.NoActionBar">
+    <style name="Theme.JuiceTracker.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.WaterTracker.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.JuiceTracker.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.WaterTracker.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.JuiceTracker.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
