UI fixes following design feedback
Change-Id: Ic5f651943cfe25e0a2ccb36caf7cc5409bc9e7e9

--- a/app/src/main/res/layout/fragment_tracker.xml
+++ b/app/src/main/res/layout/fragment_tracker.xml
@@ -33,6 +33,6 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:maxImageSize="32dp"
-        app:srcCompat="@drawable/local_drink" />
+        app:srcCompat="@drawable/ic_plus_24" />
 
 </FrameLayout>
