dark theme and lanscape orientation fixes for views
Change-Id: I8e25e66bc5990b65ba7a49d3d243d6c497f8a99e

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -91,7 +91,7 @@
         android:id="@+id/deleteButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:background="@color/white"
+        android:background="?attr/colorSurface"
         android:contentDescription="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
