--- a/app/src/main/res/drawable/ic_delete.xml
+++ b/app/src/main/res/drawable/ic_delete.xml
@@ -20,5 +20,5 @@
     android:viewportHeight="18">
   <path
       android:pathData="M5.4,13.5L8,10.9L10.6,13.5L12,12.1L9.4,9.5L12,6.9L10.6,5.5L8,8.1L5.4,5.5L4,6.9L6.6,9.5L4,12.1L5.4,13.5ZM3,18C2.45,18 1.975,17.808 1.575,17.425C1.192,17.025 1,16.55 1,16V3H0V1H5V-0H11V1H16V3H15V16C15,16.55 14.8,17.025 14.4,17.425C14.017,17.808 13.55,18 13,18H3ZM13,3H3V16H13V3ZM3,3V16V3Z"
-      android:fillColor="#1F1F1F"/>
+      android:fillColor="?attr/colorControlNormal"/>
 </vector>
