Fix bottom sheet layout to accomodate portrait mode
Change-Id: If75a95013679251bf74d8bc603eb7a9c511491fd

--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,45 +1,118 @@
-<!--
-  ~ Copyright (C) 2022 The Android Open Source Project
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+  <path
+      android:pathData="M64.15,80.99h-22.96l-5.11,-53.3c-0.04,-0.41 0.28,-0.76 0.69,-0.76h31.8c0.41,0 0.73,0.35 0.69,0.76l-5.11,53.3Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="52.67"
+          android:startY="80.99"
+          android:endX="52.67"
+          android:endY="26.93"
+          android:type="linear">
+        <item android:offset="0" android:color="#FFD2ECFB"/>
+        <item android:offset="1" android:color="#FFFFFFFF"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M67.25,32.7l-4.49,46.83h-20.18l-4.49,-46.78c-0.03,-0.34 0.31,-0.59 0.62,-0.45l2.85,1.26c2.32,1.03 4.97,1.05 7.31,0.05l0.25,-0.11c2.27,-0.97 4.83,-0.98 7.1,-0.04h0c2.12,0.88 4.49,0.93 6.65,0.14l3.78,-1.38c0.31,-0.11 0.62,0.13 0.59,0.46Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="52.67"
+          android:startY="32.21"
+          android:endX="52.67"
+          android:endY="79.53"
+          android:type="linear">
+        <item android:offset="0" android:color="#FFFDCBA3"/>
+        <item android:offset="0.25" android:color="#FFFBC197"/>
+        <item android:offset="0.68" android:color="#FFF8A678"/>
+        <item android:offset="1" android:color="#FFF6905F"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M43.07,38.39m-1.23,0a1.23,1.23 0,1 1,2.46 0a1.23,1.23 0,1 1,-2.46 0"
+      android:fillColor="#fff0e6"/>
+  <path
+      android:pathData="M44.77,45.95m-0.57,0a0.57,0.57 0,1 1,1.14 0a0.57,0.57 0,1 1,-1.14 0"
+      android:fillColor="#fff0e6"/>
+  <path
+      android:pathData="M47.39,41.79m-0.82,0a0.82,0.82 0,1 1,1.64 0a0.82,0.82 0,1 1,-1.64 0"
+      android:fillColor="#fff0e6"/>
+  <path
+      android:pathData="M62.12,71.8c-0.02,0.08 -0.04,0.16 -0.06,0.23 -0.9,3.48 -3.46,5.43 -5.69,5.48 -1.88,0.05 -3.7,0.69 -5.24,1.76 -3.31,2.28 -8.37,3.15 -12.55,2.04 -7.4,-1.97 -11.4,-10.7 -9.69,-18.17 0.06,-0.26 0.31,-0.43 0.57,-0.39 0.02,0 0.04,0 0.06,0.01l28.05,7.33 4.18,1.09c0.09,0.02 0.16,0.06 0.22,0.12h0c0.13,0.12 0.19,0.3 0.15,0.49Z"
+      android:fillColor="#359e5f"/>
+  <path
+      android:pathData="M62.26,71.39h0c-0.06,0.22 -0.12,0.43 -0.19,0.64 -1.07,3 -3.86,4.05 -5.98,4.12 -1.87,0.06 -3.69,0.66 -5.23,1.73 -3.31,2.3 -7.57,3.19 -11.76,2.07 -7.26,-1.94 -11.07,-9.91 -9.63,-17.19 0.02,0 0.04,0 0.06,0.01l28.05,7.33 4.4,1.21h0s0.28,0.08 0.28,0.08Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="46.1"
+          android:startY="65.68"
+          android:endX="43.44"
+          android:endY="80.76"
+          android:type="linear">
+        <item android:offset="0" android:color="#FFFDCBA3"/>
+        <item android:offset="0.21" android:color="#FFFCC49C"/>
+        <item android:offset="0.53" android:color="#FFFAB488"/>
+        <item android:offset="0.9" android:color="#FFF79868"/>
+        <item android:offset="1" android:color="#FFF6905F"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M36.03,66.44c0,0.32 -0.26,0.58 -0.58,0.58s-0.58,-0.26 -0.58,-0.58 0.26,-0.58 0.58,-0.58 0.58,0.26 0.58,0.58ZM37.68,68.17c-0.27,0 -0.49,0.22 -0.49,0.49s0.22,0.49 0.49,0.49 0.49,-0.22 0.49,-0.49 -0.22,-0.49 -0.49,-0.49ZM43.94,74.26c-0.55,0 -0.99,0.44 -0.99,0.99s0.44,0.99 0.99,0.99 0.99,-0.44 0.99,-0.99 -0.44,-0.99 -0.99,-0.99ZM45.42,71.46c-0.27,0 -0.49,0.22 -0.49,0.49s0.22,0.49 0.49,0.49 0.49,-0.22 0.49,-0.49 -0.22,-0.49 -0.49,-0.49ZM48.47,71.13c-0.23,0 -0.41,0.18 -0.41,0.41s0.18,0.41 0.41,0.41 0.41,-0.18 0.41,-0.41 -0.18,-0.41 -0.41,-0.41ZM33.16,67.01c-0.5,0 -0.91,0.41 -0.91,0.91s0.41,0.91 0.91,0.91 0.91,-0.41 0.91,-0.91 -0.41,-0.91 -0.91,-0.91ZM40.24,70.14c-0.32,0 -0.58,0.26 -0.58,0.58s0.26,0.58 0.58,0.58 0.58,-0.26 0.58,-0.58 -0.26,-0.58 -0.58,-0.58ZM35.47,71.62c-0.32,0 -0.58,0.26 -0.58,0.58s0.26,0.58 0.58,0.58 0.58,-0.26 0.58,-0.58 -0.26,-0.58 -0.58,-0.58ZM47.08,74.75c-0.27,0 -0.49,0.22 -0.49,0.49s0.22,0.49 0.49,0.49 0.49,-0.22 0.49,-0.49 -0.22,-0.49 -0.49,-0.49ZM36.05,68.99c-0.27,0 -0.49,0.22 -0.49,0.49s0.22,0.49 0.49,0.49 0.49,-0.22 0.49,-0.49 -0.22,-0.49 -0.49,-0.49ZM39.18,73.11c-0.55,0 -0.99,0.44 -0.99,0.99s0.44,0.99 0.99,0.99 0.99,-0.44 0.99,-0.99 -0.44,-0.99 -0.99,-0.99ZM42.14,71.46c-0.27,0 -0.49,0.22 -0.49,0.49s0.22,0.49 0.49,0.49 0.49,-0.22 0.49,-0.49 -0.22,-0.49 -0.49,-0.49ZM49.3,73.11c-0.32,0 -0.58,0.26 -0.58,0.58s0.26,0.58 0.58,0.58 0.58,-0.26 0.58,-0.58 -0.26,-0.58 -0.58,-0.58ZM51.54,71.02c-0.55,0 -0.99,0.44 -0.99,0.99s0.44,0.99 0.99,0.99 0.99,-0.44 0.99,-0.99 -0.44,-0.99 -0.99,-0.99Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="40.88"
+          android:startY="75.58"
+          android:endX="42.95"
+          android:endY="67.85"
+          android:type="linear">
+        <item android:offset="0" android:color="#FFFDCBA3"/>
+        <item android:offset="0.33" android:color="#FFFDD9BD"/>
+        <item android:offset="0.76" android:color="#FFFEE9DB"/>
+        <item android:offset="1" android:color="#FFFFF0E6"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M62.62,48.09c-6.35,0.61 -6.71,5.1 -8,9.83 -0.9,3.29 -3.88,5.93 -3.35,11.36 0.75,7.78 7.66,13.48 15.44,12.73 7.78,-0.75 13.48,-7.66 12.73,-15.44 -0.57,-5.9 -3.36,-7.31 -6.97,-11.32 -3.61,-4.01 -4.55,-7.66 -9.85,-7.15Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="52.49"
+          android:startY="72.29"
+          android:endX="76.52"
+          android:endY="58.42"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF359E5F"/>
+        <item android:offset="0.22" android:color="#FF28AE66"/>
+        <item android:offset="0.72" android:color="#FF0DD075"/>
+        <item android:offset="1" android:color="#FF04DD7B"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M73.42,38.52s0,0.02 0,0.04l-0.38,3.08c-0.37,2.98 -3.08,5.1 -6.06,4.73l-3.08,-0.38h0c-0.21,-0.03 -0.37,-0.2 -0.39,-0.4h0s0,-0.07 0,-0.1l0.38,-3.09c0.37,-2.98 3.08,-5.1 6.06,-4.73l3.08,0.38s0.04,0 0.06,0.01c0.2,0.05 0.34,0.24 0.33,0.45Z"
+      android:fillColor="#359e5f"/>
+  <path
+      android:pathData="M73.42,38.52l-9.52,7.48 -2.02,1.59 -0.35,-0.44 1.97,-1.55h0s9.59,-7.53 9.59,-7.53c0.2,0.05 0.34,0.24 0.33,0.45Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startX="63.87"
+          android:startY="45.74"
+          android:endX="73.13"
+          android:endY="38.27"
+          android:type="linear">
+        <item android:offset="0" android:color="#FF359E5F"/>
+        <item android:offset="1" android:color="#FF04DD7B"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M61.02,49.32l-1.19,-4.48c-0.07,-0.26 0.07,-0.54 0.32,-0.64l1.44,-0.57c0.28,-0.11 0.59,0.1 0.59,0.4v5.29h-1.15Z"
+      android:fillColor="#359e5f"/>
 </vector>
