--- a/app/src/main/res/drawable/juice_color.xml
+++ b/app/src/main/res/drawable/juice_color.xml
@@ -14,11 +14,11 @@
   ~ limitations under the License.
   -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+    android:width="17dp"
+    android:height="18dp"
+    android:viewportWidth="17"
+    android:viewportHeight="18">
   <path
-      android:pathData="M0,0h108v108h-108z"
-      android:fillColor="#073042"/>
+      android:pathData="M0.5,0L4,17.5H14L17,0H0.5Z"
+      android:fillColor="#000000"/>
 </vector>
