--- a/app/src/main/res/drawable/star.xml
+++ b/app/src/main/res/drawable/star.xml
@@ -13,12 +13,12 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+  <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="23dp"
+    android:height="21dp"
+    android:viewportWidth="23"
+    android:viewportHeight="21">
   <path
-      android:pathData="M0,0h108v108h-108z"
-      android:fillColor="#073042"/>
+      android:pathData="M11.5,0L14.082,7.946H22.437L15.678,12.857L18.26,20.804L11.5,15.893L4.74,20.804L7.322,12.857L0.563,7.946H8.918L11.5,0Z"
+      android:fillColor="#03DAC5"/>
 </vector>
